# cmake

./: CMakeLists.txt  main.c
src/: main.c
